--- a/Assignment-1/code/index.html
+++ b/Assignment-1/code/index.html
@@ -13,8 +13,27 @@
 <body>
     <div id="root"></div>
     <script type="text/babel">
+      const Layout=()=>{
+        return (
+        <div className="main">
+          <div className="Yellow">
+            <div className='Yellow1'></div>
+            <div className='Yellow2'></div>
+            </div>
+          <div className="Red"></div>
+          <div className="Blue">
+            <div className="Blue1"></div>
+            <div className="Blue2"></div>
+            <div className="Blue3"></div>
+          </div>
+        </div>
+          
+        )
+      }
 //React Code here
- ReactDOM.render(<div></div>,document.getElementById('root'));
+//  ReactDOM.render(<div></div>,document.getElementById('root'));
+ ReactDOM.render(<Layout/>,document.getElementById('root'));
+
 
 </script>
 <!--
